[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Default.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Levels/6_Creek/Interact.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/sbutton/S_Button_Press.png" type="Texture" id=3]
[ext_resource path="res://Assets/Levels/6_Creek/2_JokeRoom/gc.png" type="Texture" id=4]
[ext_resource path="res://Assets/Levels/6_Creek/2_JokeRoom/BG.png" type="Texture" id=5]
[ext_resource path="res://Assets/Levels/6_Creek/2_JokeRoom/FG.png" type="Texture" id=6]
[ext_resource path="res://Assets/Music/Cave_Ambience.ogg" type="AudioStream" id=7]
[ext_resource path="res://Scenes/Levels/6_Creek/Jokecat_GetOut.gd" type="Script" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 10, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 20, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 30, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 40, 0, 10, 10 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 304.082, 352.202 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 50, 50 )

[node name="JokeRoom" type="Node2D"]

[node name="BelowPlayer" type="Node2D" parent="."]
scale = Vector2( 6, 6 )

[node name="BG" type="Sprite" parent="BelowPlayer"]
texture = ExtResource( 5 )
centered = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="BelowPlayer"]
position = Vector2( 207, 75 )
frames = SubResource( 6 )
frame = 1
playing = true
centered = false

[node name="Default" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="Default" index="1"]
position = Vector2( 132, 528.083 )

[node name="Camera2D" parent="Default/Player" index="0"]
zoom = Vector2( 1.5, 1.5 )
limit_right = 1560
limit_bottom = 840

[node name="AnimatedSprite" parent="Default/Player" index="1"]
frame = 12

[node name="AbovePlayer" type="Node2D" parent="."]
scale = Vector2( 6, 6 )

[node name="FG" type="Sprite" parent="AbovePlayer"]
texture = ExtResource( 6 )
centered = false

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=[
"end",
]]
collision_layer = 7
collision_mask = 7

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 148.531, 553.231, 270.08, 552.546, 380.997, 540.518, 444.696, 542.3, 616.194, 594.863, 751.611, 595.754, 987.699, 559.227, 1155.63, 524.928, 1339.16, 529.382, 1472.96, 534.378, 1476.17, 624.411, 84.2158, 627.502, 83.8817, 552.1 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 1472.49, 550.41, 1460.71, 363.521, 1363.05, 165.406, 1197.49, 110.405, 1085.24, 120.508, 958.406, 81.2213, 686.77, 76.7315, 373.042, 97.497, 239.469, 267.55, 109.825, 348.929, 82.8855, 438.164, 82.3243, 560.513, 56.5077, 562.196, 54.2627, 362.959, 225.438, 211.427, 370.797, 58.2109, 740.648, 55.9659, 1142.49, 66.0681, 1448.36, 160.916, 1501.12, 374.745, 1505.04, 554.339 )

[node name="Jokecat_GetOut" type="Area2D" parent="."]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jokecat_GetOut"]
position = Vector2( 1213.16, 414.187 )
shape = SubResource( 7 )

[node name="ExitJokeRoom" type="Area2D" parent="."]
position = Vector2( 33, 354.813 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitJokeRoom"]
position = Vector2( 108, 148 )
shape = SubResource( 8 )

[node name="Button" type="Sprite" parent="ExitJokeRoom"]
visible = false
position = Vector2( 108, 74.874 )
scale = Vector2( 0.306122, 0.298077 )
texture = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
bus = "Music"

[editable path="Default"]
[editable path="Default/Affogato"]
[editable path="Default/Player"]
